# django-xrechnung

./: .gitignore  .pre-commit-config-full.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
django_xrechnung/: __init__.py  admin.py  apps.py  config.py  models.py  urls.py  views.py
django_xrechnung/migrations/: 0001_initial.py
django_xrechnung/templates/django_xrechnung/: invoice_detail.html  invoice_list.html
tests/: settings.py  test_admin.py  test_models.py  urls.py
